tests/ui/transmute-mut-src-unsized.stable.stderr
error[E0599]: the method `transmute_mut` exists for struct `Wrap<&mut [u8], &mut [u8; 1]>`, but its trait bounds were not satisfied
   --> tests/ui/transmute-mut-src-unsized.rs:15:35
    |
 15 | ...mut [u8; 1] = transmute_mut!(&mut [0u8][..]);
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
   ::: /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/src/util/macro_util.rs:679:1
    |
679 | pub struct Wrap<Src, Dst>(pub Src, pub PhantomData<Dst>);
    | ------------------------- doesn't satisfy `Wrap<&mut [u8], &mut [u8; 1]>: TransmuteMutDst<'_>`
    |
    = note: the following trait bounds were not satisfied:
            `[u8]: Sized`
            `<[u8; 1] as KnownLayout>::PointerMetadata = usize`
            which is required by `Wrap<&mut [u8], &mut [u8; 1]>: TransmuteMutDst<'_>`
    = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
